IV paper updates

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,13 +1,40 @@
-@misc{ding2024realgenretrievalaugmentedgeneration,
+@article{wu2024maskradarnetenhancingtransformerspatialtemporal,
+  title =        {Mask-RadarNet: Enhancing Transformer With Spatial-Temporal
+                  Semantic Context for Radar Object Detection in Autonomous
+                  Driving},
+  author =       {Yuzhi Wu and Jun Liu and Guangfeng Jiang and Weijian Liu and
+                  Danilo Orlando},
+  year =         2024,
+  journal =      {arXiv Preprint 2412.15595},
+  eprint =       {2412.15595},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  howpublished = " \url{https://arxiv.org/abs/2412.15595} ",
+}
+@article{huang2024trainingopenvocabularymonocular3d,
+  title =        {Training an Open-Vocabulary Monocular 3D Object Detection
+                  Model without 3D Data},
+  author =       {Rui Huang and Henry Zheng and Yan Wang and Zhuofan Xia and
+                  Marco Pavone and Gao Huang},
+  year =         2024,
+  journal =      {arXiv Preprint 2411.15857},
+  eprint =       {2411.15657},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  howpublished = "\url{https://arxiv.org/abs/2411.15657}",
+}
+
+@article{ding2024realgenretrievalaugmentedgeneration,
   title =        {RealGen: Retrieval Augmented Generation for Controllable
                   Traffic Scenarios},
   author =       {Wenhao Ding and Yulong Cao and Ding Zhao and Chaowei Xiao and
                   Marco Pavone},
-  year =         {2024},
+  year =         2024,
+  journal =      {arXiv Preprint 2312.13303},
   eprint =       {2312.13303},
   archivePrefix ={arXiv},
   primaryClass = {cs.LG},
-  url =          {https://arxiv.org/abs/2312.13303},
+  howpublished = " \url{https://arxiv.org/abs/2312.13303} ",
 }
 
 @misc{chen2024omnireomniurbanscene,
