avl journal club 2025-02-10

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,29 @@
+@article{10833731,
+  author =       {Liu, Haochen and Huang, Zhiyu and Huang, Wenhui and Yang,
+                  Haohan and Mo, Xiaoyu and Lv, Chen},
+  journal =      {IEEE Transactions on Pattern Analysis and Machine
+                  Intelligence},
+  title =        {Hybrid-Prediction Integrated Planning for Autonomous Driving},
+  year =         2025,
+  pages =        {1-18},
+  keywords =     {Planning;Optimization;Pipelines;Predictive
+                  models;Trajectory;Cognition;Tracking;Transformers;Safety;Iterative
+                  methods;Occupancy prediction;motion prediction;integrated
+                  prediction and planning;autonomous driving},
+  doi =          {10.1109/TPAMI.2025.3526936}
+}
+
+
+@inproceedings{chae2024towards,
+  title =        {Towards Robust 3D Object Detection with LiDAR and 4D Radar
+                  Fusion in Various Weather Conditions},
+  author =       {Chae, Yujeong and Kim, Hyeonseong and Yoon, Kuk-Jin},
+  booktitle =    {Proceedings of the IEEE/CVF Conference on Computer Vision and
+                  Pattern Recognition},
+  pages =        {15162--15172},
+  year =         2024
+}
+
 @article{wu2024maskradarnetenhancingtransformerspatialtemporal,
   title =        {Mask-RadarNet: Enhancing Transformer With Spatial-Temporal
                   Semantic Context for Radar Object Detection in Autonomous
