camera / radar slignment and object tracking

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,56 @@
+@misc{yang2023addressingdatamisalignmentimagelidar,
+  title =        {Addressing Data Misalignment in Image-LiDAR Fusion on Point
+                  Cloud Segmentation},
+  author =       {Wei Jong Yang and Guan Cheng Lee},
+  year =         2023,
+  eprint =       {2309.14932},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2309.14932},
+}
+
+@misc{shi2024radarcamerafusionobject,
+  title =        {Radar and Camera Fusion for Object Detection and Tracking: A
+                  Comprehensive Survey},
+  author =       {Kun Shi and Shibo He and Zhenyu Shi and Anjun Chen and Zehui
+                  Xiong and Jiming Chen and Jun Luo},
+  year =         {2024},
+  eprint =       {2410.19872},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2410.19872},
+}
+
+@inproceedings{Wojke2017simple,
+  title =        {Simple Online and Realtime Tracking with a Deep Association
+                  Metric},
+  author =       {Wojke, Nicolai and Bewley, Alex and Paulus, Dietrich},
+  booktitle =    {2017 IEEE International Conference on Image Processing (ICIP)},
+  year =         {2017},
+  pages =        {3645--3649},
+  organization = {IEEE},
+  doi =          {10.1109/ICIP.2017.8296962}
+}
+
+@inproceedings{Wojke2018deep,
+  title =        {Deep Cosine Metric Learning for Person Re-identification},
+  author =       {Wojke, Nicolai and Bewley, Alex},
+  booktitle =    {2018 IEEE Winter Conference on Applications of Computer Vision
+                  (WACV)},
+  year =         {2018},
+  pages =        {748--756},
+  organization = {IEEE},
+  doi =          {10.1109/WACV.2018.00087}
+}
+
+@article{zhou2020tracking,
+  title =        {Tracking Objects as Points},
+  author =       {Zhou, Xingyi and Koltun, Vladlen and Kr{\"a}henb{\"u}hl,
+                  Philipp},
+  journal =      {ECCV},
+  year =         {2020}
+}
+
 @article{10833731,
   author =       {Liu, Haochen and Huang, Zhiyu and Huang, Wenhui and Yang,
                   Haohan and Mo, Xiaoyu and Lv, Chen},
