--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,14 @@
+@inproceedings{meinhardt2022trackformer,
+  title =        {Trackformer: Multi-object tracking with transformers},
+  author =       {Meinhardt, Tim and Kirillov, Alexander and Leal-Taixe, Laura
+                  and Feichtenhofer, Christoph},
+  booktitle =    {Proceedings of the IEEE/CVF conference on computer vision and
+                  pattern recognition},
+  pages =        {8844--8854},
+  year =         {2022}
+}
+
+
 @inproceedings{zhang2022bytetrack,
   title =        {Bytetrack: Multi-object tracking by associating every
                   detection box},
