--- a/newlib.bib
+++ b/newlib.bib
@@ -5,7 +5,7 @@
   booktitle =    {Proceedings of the IEEE/CVF conference on computer vision and
                   pattern recognition},
   pages =        {8844--8854},
-  year =         {2022}
+  year =         2022
 }
 
 
@@ -17,7 +17,7 @@
                   and Wang, Xinggang},
   booktitle =    {European conference on computer vision},
   pages =        {1--21},
-  year =         {2022},
+  year =         2022,
   organization = {Springer}
 }
 
