--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,16 @@
+
+
+@Book{ang24:iser18,
+  editor =       {Marcelo Ang and Oussama Khatib},
+  title =        {Experimental Robotics - The 18th ISER},
+  publisher =    {Springer Verlag},
+  year =         2024,
+  volume =       30,
+  series =       {Springer Proceedings in Advanced Robotics},
+  address =      {Singapore},
+  month =        {Oct}
+}
+
 @inproceedings{meinhardt2022trackformer,
   title =        {Trackformer: Multi-object tracking with transformers},
   author =       {Meinhardt, Tim and Kirillov, Alexander and Leal-Taixe, Laura
