--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,66 @@
+@INPROCEEDINGS{7989285,
+  author =       {Costa, John Tighe and Yim, Mark},
+  booktitle =    {2017 IEEE International Conference on Robotics and Automation
+                  (ICRA)},
+  title =        {Designing for uniform mobility using holonomicity},
+  year =         2017,
+  pages =        {2448-2453},
+  keywords =     {Wheels;Mobile robots;Ellipsoids;Measurement;Mobile
+                  communication;Actuators},
+  doi =          {10.1109/ICRA.2017.7989285}
+}
+
+
+@article{Antoun_VaHorn_2021,
+  title =        {Using a Reconfigurable Holonomic Drive Robot in Robotic
+                  education: A proposed study on utilizing reconfigurable robots
+                  in undergraduate education},
+  volume =       9,
+  url =
+                  {https://journals.scholarpublishing.org/index.php/AIVP/article/view/9789},
+  DOI =          {10.14738/aivp.92.9789},
+  abstractNote = {&amp;lt;p&amp;gt;In industry it is not uncommon for machines
+                  to outlive the purpose for which they were commissioned; at
+                  times these perfectly serviceable devices are simply
+                  decommissioned and left neglected in storage to slowly decay.
+                  Motors, actuators, and structural mechanics are still
+                  operational, while control system and their design purpose may
+                  have passed into obsolescence. In applied educational fields
+                  students are often reluctant to consider working with
+                  seemingly obsolete systems.&amp;lt;/p&amp;gt;
+                  &amp;lt;p&amp;gt;Reconfigurable systems may offer a solution
+                  to this challenge for education and training in the field of
+                  autonomous robotics. Often custom-built devices are beyond the
+                  expenditure budget constraints of a college department for one
+                  course. Mecanum wheeled robots with tractive forces at each
+                  wheel offer the opportunity to explore translation
+                  controllable in a degree of freedom that is equal to total
+                  degrees of freedom of the robot. They are also excellent
+                  platform to demonstrate and study holonomic drive
+                  theories.&amp;lt;/p&amp;gt; &amp;lt;p&amp;gt;In this proposed
+                  study we seek to explore the viability of reconfigurable
+                  robots in delivering an applied robotic control perception and
+                  design educational program.&amp;lt;/p&amp;gt;
+                  &amp;lt;p&amp;gt;&amp;amp;nbsp;&amp;lt;/p&amp;gt;},
+  number =       2,
+  journal =      {European Journal of Applied Sciences},
+  author =       {Antoun, Sherine and Van Horn, Isaac},
+  year =         2021,
+  month =        {Apr.},
+  pages =        {131–138}
+}
+
+@booklet{EasyChair:2067,
+  author =       {Divyanshu Tak and Ayush Jain and Paras Savnani and Akash
+                  Mecwan},
+  title =        {Path Tracing in holonomic drive system with Reduced Overshoot
+                  using rotary encoders},
+  howpublished = {EasyChair Preprint 2067},
+  year =         {EasyChair, 2019}
+}
+
+
+
 @Book{ang24:iser18,
   editor =       {Marcelo Ang and Oussama Khatib},
   title =        {Experimental Robotics - The 18th ISER},
