AVL journal club 250224

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,40 @@
+@misc{ding2024adatrackendtoendmulticamera3d,
+      title={ADA-Track++: End-to-End Multi-Camera 3D Multi-Object Tracking with Alternating Detection and Association}, 
+      author={Shuxiao Ding and Lukas Schneider and Marius Cordts and Juergen Gall},
+      year={2024},
+      eprint={2405.08909},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2405.08909}, 
+}
+
+@misc{cusumanotowner2025robustautonomyemergesselfplay,
+  title =        {Robust Autonomy Emerges from Self-Play},
+  author =       {Marco Cusumano-Towner and David Hafner and Alex Hertzberg and
+                  Brody Huval and Aleksei Petrenko and Eugene Vinitsky and Erik
+                  Wijmans and Taylor Killian and Stuart Bowers and Ozan Sener
+                  and Philipp Krähenbühl and Vladlen Koltun},
+  year =         {2025},
+  eprint =       {2502.03349},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.LG},
+  url =          {https://arxiv.org/abs/2502.03349},
+}
+
+@InProceedings{zheng25:iclr,
+  author =       {Yinan Zheng and Ruiming Liang and Kexin Zheng and Jinliang
+                  Zheng and Liyuan Mao and Jianxiong Li and Weihao Gu and Rui Ai
+                  and Shengbo Eben Li and Xianyuan Zhan and Jingjing Liu},
+  title =        {Diffusion-Based Planning for Autonomous Driving with Flexible
+                  Guidance},
+  booktitle =    {Intl. Conf. of Learning Representation (ICLR)},
+  year =         2025,
+  pages =        { },
+  month =        {April},
+  address =      {Singapore},
+  url =          {https://openreview.net/pdf?id=wM2sfVgMDH}
+}
+
 @INPROCEEDINGS{7989285,
   author =       {Costa, John Tighe and Yim, Mark},
   booktitle =    {2017 IEEE International Conference on Robotics and Automation
@@ -9,8 +46,6 @@
                   communication;Actuators},
   doi =          {10.1109/ICRA.2017.7989285}
 }
-
-
 
 @article{Antoun_VaHorn_2021,
   title =        {Using a Reconfigurable Holonomic Drive Robot in Robotic
