AVL prediction and tracking

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,5 +1,57 @@
+@misc{shi2025motionforecastingautonomousvehicles,
+  title =        {Motion Forecasting for Autonomous Vehicles: A Survey},
+  author =       {Jianxin Shi and Jinhao Chen and Yuandong Wang and Li Sun and
+                  Chunyang Liu and Wei Xiong and Tianyu Wo},
+  year =         {2025},
+  eprint =       {2502.08664},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2502.08664},
+}
+
+@misc{ratnabala2025magnnetmultiagentgraphneural,
+  title =        {{MAGNNET}: Multi-Agent Graph Neural Network-based Efficient Task
+                  Allocation for Autonomous Vehicles with Deep Reinforcement
+                  Learning},
+  author =       {Lavanya Ratnabala and Aleksey Fedoseev and Robinroy Peter and
+                  Dzmitry Tsetserukou},
+  year =         {2025},
+  eprint =       {2502.02311},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2502.02311},
+}
+
+@misc{hao2025mapfusionnovelbevfeature,
+  title =        {MapFusion: A Novel {BEV} Feature Fusion Network for
+                  Multi-modal Map Construction},
+  author =       {Xiaoshuai Hao and Yunfeng Diao and Mengchuan Wei and Yifan
+                  Yang and Peng Hao and Rong Yin and Hui Zhang and Weiming Li
+                  and Shu Zhao and Yu Liu},
+  year =         2025,
+  eprint =       {2502.04377},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2502.04377},
+}
+
+
+@article{10.1016/j.trc.2025.105047,
+  year =         {2025},
+  title =        {{Deep imitative reinforcement learning with gradient
+                  conflict-free for decision-making in autonomous vehicles}},
+
+author = {Shan, Zitong and Zhao, Jian and Huang, Wenhui and Zhao, Yang and Ge, Linhe and Zhong, Shouren and Hu, Hongyu and Lv, Chen and Zhu, Bing}, 
+journal = {Transportation Research Part C: Emerging Technologies}, 
+issn = {0968-090X}, 
+doi = {10.1016/j.trc.2025.105047}, 
+abstract = {{As autonomous driving technology advances, researchers are focusing on utilizing expert priors to improve the agents for learning-based decision-making in autonomous vehicles. Expert priors have various carriers, and the existing technology primarily utilizes expert priors derived from demonstration data and interaction data. This paper proposed a deep imitative reinforcement learning method for decision-making in autonomous vehicles, synergizing the expert priors in both demonstration data and interaction data. The gradient projection technique was adopted to mitigate gradient conflicts between the demonstration and interaction data during the training phase, thus preventing learning stagnation and enhancing agent performance. Furthermore, we deployed the proposed decision-making method on real autonomous vehicles. An augmented reality experiment was conducted with random virtual traffic flows from the simulator. The simulation and experiment results demonstrated that the proposed method enhanced training efficiency and safety performance, and preliminarily overcame sim-to-real challenges.}}, 
+pages = {105047},
+volume = {173}
+}
+
 @misc{ding2024adatrackendtoendmulticamera3d,
-      title={ADA-Track++: End-to-End Multi-Camera 3D Multi-Object Tracking with Alternating Detection and Association}, 
+      title={{ADA-Track++}: End-to-End Multi-Camera 3D Multi-Object Tracking with Alternating Detection and Association}, 
       author={Shuxiao Ding and Lukas Schneider and Marius Cordts and Juergen Gall},
       year={2024},
       eprint={2405.08909},
