AVL journal club / overview and robopoint

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,16 @@
+@misc{yuan2024robopointvisionlanguagemodelspatial,
+  title =        {RoboPoint: A Vision-Language Model for Spatial Affordance
+                  Prediction for Robotics},
+  author =       {Wentao Yuan and Jiafei Duan and Valts Blukis and Wilbert
+                  Pumacay and Ranjay Krishna and Adithyavairavan Murali and
+                  Arsalan Mousavian and Dieter Fox},
+  year =         {2024},
+  eprint =       {2406.10721},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2406.10721},
+}
+
 @misc{shi2025motionforecastingautonomousvehicles,
   title =        {Motion Forecasting for Autonomous Vehicles: A Survey},
   author =       {Jianxin Shi and Jinhao Chen and Yuandong Wang and Li Sun and
