--- a/newlib.bib
+++ b/newlib.bib
@@ -4,7 +4,7 @@
   author =       {Wentao Yuan and Jiafei Duan and Valts Blukis and Wilbert
                   Pumacay and Ranjay Krishna and Adithyavairavan Murali and
                   Arsalan Mousavian and Dieter Fox},
-  year =         {2024},
+  year =         2024,
   eprint =       {2406.10721},
   archivePrefix ={arXiv},
   primaryClass = {cs.RO},
