NVIDIA GTC dataset and GRUTopia

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,44 @@
+@misc{wang2024grutopiadreamgeneralrobots,
+  title =        {{GRUtopia}: Dream General Robots in a City at Scale},
+  author =       {Hanqing Wang and Jiahe Chen and Wensi Huang and Qingwei Ben
+                  and Tai Wang and Boyu Mi and Tao Huang and Siheng Zhao and
+                  Yilun Chen and Sizhe Yang and Peizhou Cao and Wenye Yu and
+                  Zichao Ye and Jialun Li and Junfeng Long and Zirui Wang and
+                  Huiling Wang and Ying Zhao and Zhongying Tu and Yu Qiao and
+                  Dahua Lin and Jiangmiao Pang},
+  year =         {2024},
+  eprint =       {2407.10943},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2407.10943},
+}
+
+@InProceedings{Wang24AICity24,
+  author =       {Shuo Wang and David C. Anastasiu and Zheng Tang and Ming-Ching
+                  Chang and Yue Yao and Liang Zheng and Mohammed Shaiqur Rahman
+                  and Meenakshi S. Arya and Anuj Sharma and Pranamesh
+                  Chakraborty and Sanjita Prajapati and Quan Kong and Norimasa
+                  Kobori and Munkhjargal Gochoo and Munkh-Erdene Otgonbold and
+                  Ganzorig Batnasan and Fady Alnajjar and Ping-Yang Chen and
+                  Jun-Wei Hsieh and Xunlei Wu and Sameer Satish Pusegaonkar and
+                  Yizhou Wang and Sujit Biswas and Rama Chellappa},
+  title =        {The 8th {AI City Challenge}},
+  booktitle =    {The IEEE Conference on Computer Vision and Pattern Recognition
+                  (CVPR) Workshops},
+  month =        {June},
+  year =         {2024},
+}
+
+@misc{Wang24BEVSUSHI,
+  author =       {Yizhou Wang and Tim Meinhardt and Orcun Cetintas and Cheng-Yen
+                  Yang and Sameer Satish Pusegaonkar and Benjamin Missaoui and
+                  Sujit Biswas and Zheng Tang and Laura Leal-Taix{\'e}},
+  title =        {{BEV-SUSHI}: {M}ulti-target multi-camera {3D} detection and
+                  tracking in bird's-eye view},
+  note =         {arXiv:2412.00692},
+  year =         {2024}
+}
+
 @misc{yuan2024robopointvisionlanguagemodelspatial,
   title =        {RoboPoint: A Vision-Language Model for Spatial Affordance
                   Prediction for Robotics},
