DCIST T2 meeting on game strategy

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,66 @@
+@misc{pourghorban2022targetdefensesequentiallyarriving,
+  title =        {Target Defense against Sequentially Arriving Intruders},
+  author =       {Arman Pourghorban and Michael Dorothy and Daigo Shishika and
+                  Alexander Von Moll and Dipankar Maity},
+  year =         {2022},
+  eprint =       {2212.06628},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2212.06628},
+}
+
+@inproceedings{9304213,
+  author =       {Lee, Elijah S. and Shishika, Daigo and Kumar, Vijay},
+  booktitle =    {2020 59th IEEE Conference on Decision and Control (CDC)},
+  title =        {Perimeter-defense Game between Aerial Defender and Ground
+                  Intruder},
+  year =         2020,
+  pages =        {1530-1536},
+  keywords =     {Games;Simulation;Shape;Trajectory;Space vehicles;Robot
+                  kinematics;Power generation},
+  doi =          {10.1109/CDC42340.2020.9304213}
+}
+
+
+@inproceedings{shishika2022dynamic,
+  title =        {Dynamic defender-attacker blotto game},
+  author =       {Shishika, Daigo and Guan, Yue and Dorothy, Michael and Kumar,
+                  Vijay},
+  booktitle =    {2022 American Control Conference (ACC)},
+  pages =        {4422--4428},
+  year =         2022,
+  organization = {IEEE}
+}
+
+@InProceedings{10.1007/978-3-030-64793-3_26,
+  author =       "Shishika, Daigo and Kumar, Vijay",
+  editor =       "Zhu, Quanyan and Baras, John S. and Poovendran, Radha and
+                  Chen, Juntao",
+  title =        "A Review of Multi Agent Perimeter Defense Games",
+  booktitle =    "Decision and Game Theory for Security",
+  year =         2020,
+  publisher =    "Springer International Publishing",
+  address =      "Cham",
+  pages =        "472--485",
+  abstract =     "This paper reviews a series of works done on the multi-agent
+                  perimeter defense scenario, in which a team of intruders try
+                  to score by reaching the target region while a team of
+                  defenders try to minimize the score by intercepting those
+                  intruders. We describe how the small-scale differential games
+                  are solved and are leveraged to design team strategies in the
+                  large-scale swarm versus swarm scenarios. Three different
+                  approaches to analyze the large-scale games (MM, MIS, and LGR)
+                  are introduced with comments on their relative strengths and
+                  weaknesses. As a unique contribution of this paper, we discuss
+                  how the existing results can be extended into more general
+                  problem formulations. Furthermore, we point out the
+                  limitations of the current work and suggest potential
+                  directions for future research.",
+  isbn =         "978-3-030-64793-3"
+}
+
+
+
 @misc{wang2024grutopiadreamgeneralrobots,
   title =        {{GRUtopia}: Dream General Robots in a City at Scale},
   author =       {Hanqing Wang and Jiahe Chen and Wensi Huang and Qingwei Ben
