--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,16 @@
+@InProceedings{zhang25:mapgs,
+  author =       {Hengyuan Zhang and David Paz and Yuliang Guo and Xinyu huang
+                  and Henrik Christensen and Liu Ren},
+  title =        {{MapGS}: Generalizable Pretraining and Data Augmentation for
+                  Online Mapping via Novel View Synthesis},
+  booktitle =    {36th Intelligent Vehicles Symposium (IV)},
+  year =         2025,
+  pages =        { },
+  month =        {June},
+  address =      {Cluj-Napoca, Romania},
+  organization = {IEEE}
+}
+
 @misc{pourghorban2022targetdefensesequentiallyarriving,
   title =        {Target Defense against Sequentially Arriving Intruders},
   author =       {Arman Pourghorban and Michael Dorothy and Daigo Shishika and
