new publicaitons hic/iv 2025

--- a/newlib.bib
+++ b/newlib.bib
@@ -11,6 +11,19 @@
   organization = {IEEE}
 }
 
+@InProceedings{diwanji25:sd,
+  author =       {Hitvarth Diwanji and Jing-Yan Liao and Akshar Tumu and Henrik
+                  Christensen and Marcell Vazquez-Chanlatte and Chikao Tsuchiya},
+  title =        {{SD++}: Enhancing Standard Definition Maps by Incorporating
+                  Road Knowledge using {LLMs}},
+  booktitle =    {36th Intelligent Vehicles Symposium (IV)},
+  year =         2025,
+  pages =        { },
+  month =        {June},
+  address =      {Cluj-Napoca, Romania},
+  organization = {IEEE}
+}
+
 @misc{pourghorban2022targetdefensesequentiallyarriving,
   title =        {Target Defense against Sequentially Arriving Intruders},
   author =       {Arman Pourghorban and Michael Dorothy and Daigo Shishika and
