AVL journal club / BEV / gradient free planning

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,16 @@
+@misc{zhao2024improvingbirdseyeview,
+  title =        {Improving Bird's Eye View Semantic Segmentation by Task
+                  Decomposition},
+  author =       {Tianhao Zhao and Yongcan Chen and Yu Wu and Tianyang Liu and
+                  Bo Du and Peilun Xiao and Shi Qiu and Hongda Yang and Guozhen
+                  Li and Yi Yang and Yutian Lin},
+  year =         {2024},
+  eprint =       {2404.01925},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2404.01925},
+}
+
 @InProceedings{zhang25:mapgs,
   author =       {Hengyuan Zhang and David Paz and Yuliang Guo and Xinyu huang
                   and Henrik Christensen and Liu Ren},
