--- a/newlib.bib
+++ b/newlib.bib
@@ -11,6 +11,18 @@
   url =          {https://arxiv.org/abs/2404.01925},
 }
 
+@InProceedings{stone24:_poten,
+  author =       {Brett Stone and Matthew Jensen},
+  title =        {Potential localized impact of autonomous capable electric
+                  aircraft tugs},
+  booktitle =    {International Design Engineering Technical Conference
+                  (IDETC-CEI2024)},
+  year =         2024,
+  month =        {August},
+  address =      {Washington, DC},
+  organization = {ASME}
+}
+
 @InProceedings{zhang25:mapgs,
   author =       {Hengyuan Zhang and David Paz and Yuliang Guo and Xinyu huang
                   and Henrik Christensen and Liu Ren},
