Generative Robotics Models

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,20 @@
+@misc{hu2024generalpurposerobotsfoundationmodels,
+  title =        {Toward General-Purpose Robots via Foundation Models: A Survey
+                  and Meta-Analysis},
+  author =       {Yafei Hu and Quanting Xie and Vidhi Jain and Jonathan Francis
+                  and Jay Patrikar and Nikhil Keetha and Seungchan Kim and Yaqi
+                  Xie and Tianyi Zhang and Hao-Shu Fang and Shibo Zhao and
+                  Shayegan Omidshafiei and Dong-Ki Kim and Ali-akbar
+                  Agha-mohammadi and Katia Sycara and Matthew Johnson-Roberson
+                  and Dhruv Batra and Xiaolong Wang and Sebastian Scherer and
+                  Chen Wang and Zsolt Kira and Fei Xia and Yonatan Bisk},
+  year =         {2024},
+  eprint =       {2312.08782},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO},
+  url =          {https://arxiv.org/abs/2312.08782},
+}
+
 @misc{zhao2024improvingbirdseyeview,
   title =        {Improving Bird's Eye View Semantic Segmentation by Task
                   Decomposition},
