AVL journal club 2025-04-18

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,16 @@
+@inproceedings{yang2024widthformer,
+  title =        {Widthformer: Toward efficient transformer-based bev view
+                  transformation},
+  author =       {Yang, Chenhongyi and Lin, Tianwei and Huang, Lichao and
+                  Crowley, Elliot J},
+  booktitle =    {2024 IEEE/RSJ International Conference on Intelligent Robots
+                  and Systems (IROS)},
+  pages =        {8457--8464},
+  year =         {2024},
+  organization = {IEEE}
+}
+
+
 @misc{hu2024generalpurposerobotsfoundationmodels,
   title =        {Toward General-Purpose Robots via Foundation Models: A Survey
                   and Meta-Analysis},
