AVL journal club 2

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,12 @@
+@article{zhang2024simpl,
+  title =        {Simpl: A simple and efficient multi-agent motion prediction
+                  baseline for autonomous driving},
+  author =       {Zhang, Lu and Li, Peiliang and Liu, Sikang and Shen, Shaojie},
+  journal =      {IEEE Robotics and Automation Letters},
+  year =         {2024},
+  publisher =    {IEEE}
+}
+
 @inproceedings{yang2024widthformer,
   title =        {Widthformer: Toward efficient transformer-based bev view
                   transformation},
@@ -9,7 +18,6 @@
   year =         {2024},
   organization = {IEEE}
 }
-
 
 @misc{hu2024generalpurposerobotsfoundationmodels,
   title =        {Toward General-Purpose Robots via Foundation Models: A Survey
