3D BEV map change detection

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,9 +1,28 @@
+@article{peng2025uni,
+  title =        {Uni-PrevPredMap: Extending PrevPredMap to a Unified Framework
+                  of Prior-Informed Modeling for Online Vectorized HD Map
+                  Construction},
+  author =       {Peng, Nan and Zhou, Xun and Wang, Mingming and Chen, Guisong
+                  and Xu, Wenqi},
+  journal =      {arXiv preprint arXiv:2504.06647},
+  year =         2025
+}
+
+@inproceedings{xiong2023neuralmapprior,
+  author =       {Xiong, Xuan and Liu, Yicheng and Yuan, Tianyuan and Wang, Yue
+                  and Wang, Yilun and Zhao Hang},
+  title =        {Neural Map Prior for Autonomous Driving},
+  journal =      {Proceedings of the IEEE/CVF International Conference on
+                  Computer Vision (CVPR)},
+  year =         {2023}
+}
+
 @article{zhang2024simpl,
   title =        {Simpl: A simple and efficient multi-agent motion prediction
                   baseline for autonomous driving},
   author =       {Zhang, Lu and Li, Peiliang and Liu, Sikang and Shen, Shaojie},
   journal =      {IEEE Robotics and Automation Letters},
-  year =         {2024},
+  year =         2024,
   publisher =    {IEEE}
 }
 
