AVL journal club 2025-05-08

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,15 @@
+@misc{goff2025learningdriveworldmodel,
+  title =        {Learning to Drive from a World Model},
+  author =       {Mitchell Goff and Greg Hogan and George Hotz and Armand du
+                  Parc Locmaria and Kacper Raczy and Harald Schäfer and Adeeb
+                  Shihadeh and Weixing Zhang and Yassine Yousfi},
+  year =         {2025},
+  eprint =       {2504.19077},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2504.19077},
+}
+
 @article{peng2025uni,
   title =        {Uni-PrevPredMap: Extending PrevPredMap to a Unified Framework
                   of Prior-Informed Modeling for Online Vectorized HD Map
