New AI robotics roadmap

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,16 @@
+@article{billard2025roadmap,
+  title =        {A roadmap for AI in robotics},
+  author =       {Billard, Aude and Albu-Schaeffer, Alin and Beetz, Michael and
+                  Burgard, Wolfram and Corke, Peter and Ciocarlie, Matei and
+                  Dahiya, Ravinder and Kragic, Danica and Goldberg, Ken and
+                  Nagai, Yukie and others},
+  journal =      {Nature Machine Intelligence},
+  pages =        {1--7},
+  year =         2025,
+  publisher =    {Nature Publishing Group}
+}
+
+
 @article{LIM2025104349,
   title =        {CBS-Budget (CBSB): A complete and bounded suboptimal search
                   for multi-agent path finding},
