Added ref for FOD dataset

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,13 @@
+@misc{munyer2022fodadatasetforeignobject,
+      title={FOD-A: A Dataset for Foreign Object Debris in Airports}, 
+      author={Travis Munyer and Pei-Chi Huang and Chenyu Huang and Xin Zhong},
+      year={2022},
+      eprint={2110.03072},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2110.03072}, 
+}
+
 @article{billard2025roadmap,
   title =        {A roadmap for AI in robotics},
   author =       {Billard, Aude and Albu-Schaeffer, Alin and Beetz, Michael and
