FOD detecton and OAK-D training

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,16 +1,46 @@
-<<<<<<< HEAD
-@misc{munyer2022fodadatasetforeignobject,
-      title={FOD-A: A Dataset for Foreign Object Debris in Airports}, 
-      author={Travis Munyer and Pei-Chi Huang and Chenyu Huang and Xin Zhong},
-      year={2022},
-      eprint={2110.03072},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2110.03072}, 
+@incollection{Sharma_2022_OAK1,
+  author =       {Aditya Sharma},
+  title =        {Introduction to {OpenCV AI} Kit {(OAK)}},
+  booktitle =    {PyImageSearch},
+  editor =       {Puneet Chugh and Aritra Roy Gosthipaty and Susan Huot and
+                  Kseniia Kidriavsteva and Ritwik Raha and Abhishek Thanki},
+  year =         {2022},
+  note =         {https://pyimg.co/dus4w},
 }
 
-=======
->>>>>>> 5466437 (New AI robotics roadmap)
+@misc{munyer2022foreignobjectdebrisdetection,
+  title =        {Foreign Object Debris Detection for Airport Pavement Images
+                  based on Self-supervised Localization and Vision Transformer},
+  author =       {Travis Munyer and Daniel Brinkman and Xin Zhong and Chenyu
+                  Huang and Iason Konstantzos},
+  year =         2022,
+  eprint =       {2210.16901},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2210.16901},
+}
+
+@incollection{Sharma_2023_CIC-OAK-D,
+  author =       {Aditya Sharma},
+  title =        {Training a Custom Image Classification Network for {OAK-D}},
+  booktitle =    {PyImageSearch},
+  editor =       {Puneet Chugh and Aritra Roy Gosthipaty and Susan Huot and
+                  Kseniia Kidriavsteva and Ritwik Raha and Abhishek Thanki},
+  year =         {2023},
+  url =          {https://pyimg.co/ab1dj},
+}
+
+@misc{munyer2022fodadatasetforeignobject,
+  title =        {FOD-A: A Dataset for Foreign Object Debris in Airports},
+  author =       {Travis Munyer and Pei-Chi Huang and Chenyu Huang and Xin
+                  Zhong},
+  year =         {2022},
+  eprint =       {2110.03072},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  url =          {https://arxiv.org/abs/2110.03072},
+}
+
 @article{billard2025roadmap,
   title =        {A roadmap for AI in robotics},
   author =       {Billard, Aude and Albu-Schaeffer, Alin and Beetz, Michael and
@@ -23,7 +53,6 @@
   publisher =    {Nature Publishing Group}
 }
 
-
 @article{LIM2025104349,
   title =        {CBS-Budget (CBSB): A complete and bounded suboptimal search
                   for multi-agent path finding},
@@ -33,8 +62,7 @@
   year =         2025,
   issn =         {0004-3702},
   doi =          {https://doi.org/10.1016/j.artint.2025.104349},
-  url =
-                  {https://www.sciencedirect.com/science/article/pii/S0004370225000682},
+  url =          {https://www.sciencedirect.com/science/article/pii/S0004370225000682},
   author =       {Jaein Lim and Panagiotis Tsiotras},
   keywords =     {Multi-agent path finding, Conflict based search, Bounded
                   suboptimality},
