FOD detection, Oak-D examples and Carpin book

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,28 @@
+
+@misc{MRTP,
+  author =       {Stefano Carpin},
+  title =        {Mobile Robotics: Theory and Practice},
+  url =          {http://robotics.ucmerced.edu/MRTP},
+  year =         {2025}
+}
+
+
+@INPROCEEDINGS{10497406,
+  author =       {Kumari, Alka and Dixit, Abhishek and Agrawal, Pooja},
+  booktitle =    {2024 International Conference on Emerging Smart Computing and
+                  Informatics (ESCI)},
+  title =        {Deep Learning Based Foreign Object Debris (FOD) Detection on
+                  Runway},
+  year =         2024,
+  pages =        {1-6},
+  keywords =     {YOLO;Deep learning;Training;Atmospheric modeling;Computational
+                  modeling;Wires;Radar imaging;FOD;Runway;object
+                  detection;Detection;classification;Deep
+                  Learning;YOLO;YOLOv8;YOLOv5},
+  doi =          {10.1109/ESCI59607.2024.10497406}
+}
+
+
 @incollection{Sharma_2022_OAK1,
   author =       {Aditya Sharma},
   title =        {Introduction to {OpenCV AI} Kit {(OAK)}},
@@ -6,6 +31,26 @@
                   Kseniia Kidriavsteva and Ritwik Raha and Abhishek Thanki},
   year =         {2022},
   note =         {https://pyimg.co/dus4w},
+}
+
+@software{yolov8_ultralytics,
+  author =       {Glenn Jocher and Ayush Chaurasia and Jing Qiu},
+  title =        {Ultralytics YOLOv8},
+  version =      {8.0.0},
+  year =         {2023},
+  url =          {https://github.com/ultralytics/ultralytics},
+  orcid =        {0000-0001-5950-6979, 0000-0002-7603-6750, 0000-0003-3783-7069},
+  license =      {AGPL-3.0}
+}
+
+@incollection{Sharma_2023_YOLOv8-OAK-D,
+  author =       {Aditya Sharma},
+  title =        {Training the {YOLOv8} Object Detector for {OAK-D}},
+  booktitle =    {PyImageSearch},
+  editor =       {Puneet Chugh and Aritra Roy Gosthipaty and Susan Huot and
+                  Kseniia Kidriavsteva and Ritwik Raha and Abhishek Thanki},
+  year =         {2023},
+  url =          {https://pyimg.co/9qcei},
 }
 
 @misc{munyer2022foreignobjectdebrisdetection,
